[tool.poetry]
name = "enchanted-motorbike"
version = "0.1.0"
description = ""
authors = ["DOCtorActoAntohich <fairy666death@mail.ru>"]
readme = "README.md"
packages = [{ include = "enchanted_motorbike" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
pydantic = { extras = ["dotenv"], version = "^1.10.7" }
uvicorn = "^0.21.1"
fastapi-utils = "^0.2.1"
httpx = "^0.23.3"
motor = "^3.1.2"
gunicorn = "^20.1.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# Linting and typing.
mypy = "^0"
ruff = "^0"
black = "^22"

[tool.mypy]
allow_redefinition = true

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "tqdm"
]
ignore_missing_imports = true
